# Debloatr

./: .gitignore  AUDIT_REPORT.md  CHANGELOG.md  CODING_GUIDE.md  CONTRIBUTING.md  DEPENDENCY-AUDIT.md  EVALUATION_REPORT.md  README.md  REFOCUS_PLAN.md  SECURITY.md  SECURITY_AUDIT.md  claude.md  debloatd.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/profiles/: default.json
data/signatures/: TEMPLATE.json  default.json  expanded.json
scripts/: validate_signature.py
src/: __init__.py
src/actions/: __init__.py  contain.py  disable.py  executor.py  hosts_blocker.py  planner.py  privacy_hardener.py  remove.py
src/analysis/: __init__.py  risk.py
src/classification/: __init__.py  engine.py  heuristics.py  signatures.py
src/core/: __init__.py  config.py  logging_config.py  models.py  orchestrator.py  powershell.py  recovery.py  restore.py  rollback.py  security.py  session.py  snapshot.py
src/discovery/: __init__.py  base.py  dns_privacy.py  drivers.py  programs.py  services.py  startup.py  tasks.py  telemetry.py
src/ui/: __init__.py
src/ui/cli/: __init__.py  commands.py  formatters.py
src/ui/gui/: __init__.py  main.py
tests/: __init__.py  conftest.py  test_actions.py  test_config.py  test_drivers.py  test_engine.py  test_heuristics.py  test_models.py  test_orchestrator.py  test_privacy.py  test_programs.py  test_risk.py  test_rollback.py  test_security.py  test_services.py  test_signatures.py  test_startup.py  test_tasks.py  test_telemetry.py  test_ui.py
tests/integration/: __init__.py  conftest.py  test_classification_live.py  test_disable_rollback_live.py  test_programs_live.py  test_scan_pipeline_live.py  test_services_live.py
